Correct align-items property in .works class
Fix typo in align-items property.

--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ footer a.online i{
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    align-items: stretch:
 }
 
 .works .left{
